tests/errors/main_fun_invalid_err/main_fun_invalid_err.c
#error main_fun_invalid_err.main_fun_invalid_err:4:1 main function must be defined in the form of: `let main _ = ...`.
